--- a/index.html
+++ b/index.html
@@ -9,8 +9,13 @@
     <script src="aaa.js"></script>
 </head>
 <body>
+    <h1>aaa</h1>
     <div>
-        <h1>aaa</h1>
+        <input type="text">
+    <hr>
+        <input type="text">
+    <hr>
+        <button>Enviar</button>
     </div>
 </body>
 </html>
