--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <script src="aaa.js"></script>
 </head>
 <body>
-    <h1>aaa</h1>
+    <h1>Don't touch this</h1>
     <div>
         <input type="text">
     <hr>
         <input type="text">
     <hr>
-        <button>Enviar</button>
+        <button type="button" class="but" onclick="redireccion()">Enviar</button>
     </div>
 </body>
 </html>
