--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
 <body>
     <h1>Hola buen día, no recomiendo ingresar.</h1>
     <div>
+        <p>Nombre</p>
+    <hr>
         <input type="text">
+        <p>Contraseña</p>
     <hr>
         <input type="text">
     <hr>
