--- a/index.html
+++ b/index.html
@@ -11,14 +11,9 @@
 <body>
     <h1>Hola buen día, no recomiendo ingresar.</h1>
     <div>
-        <p>Nombre</p>
-    <hr>
-        <input type="text">
-        <p>Contraseña</p>
-    <hr>
-        <input type="text">
-    <hr>
-        <button type="button" class="but" onclick="redireccion()">Enviar</button>
+        <label for="nombre">Nombre:</label>
+        <input type="text" id ="nombre">
     </div>
+    <button type="button" class="but" onclick="redireccion()">Enviar</button>
 </body>
 </html>
