--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="aaa.css">
     <title>Document</title>
 </head>
 <body>
+    <h1>aaa</h1>
     <form action="">
-        <div>
+        <div id="contenedor">
            <label   for="nombre">Nombre</label> 
            <input   type="text" id="nombre">
         </div>
@@ -16,10 +18,19 @@
             <label   for="contraseña">Contraseña</label> 
             <input   type="password" id="contraseña">
          </div>
-         <input type="submit"  onclick="return funcionEnviar();" value="Enviar">
+         <input type="submit" id="btn" onclick="return funcionEnviar();" value="Enviar">
     </form>
 <div id="error"></div>
+<input type="button" id="limpiar" onclick="limpiar()"value="Limpiar">
 
+<div id="reloj">
+    <div class="contenedorReloj" id="contenedor">
+      <div id="hora">Reloj Digital</div>
+      <div id="fecha">Fecha</div>
+    </div>
+  </div>
+  
     <script src="aaa.js"></script>
+    <script src="storage.js"></script>
 </body>
 </html>
