--- a/index.html
+++ b/index.html
@@ -22,15 +22,8 @@
     </form>
 <div id="error"></div>
 <input type="button" id="limpiar" onclick="limpiar()"value="Limpiar">
-
-<div id="reloj">
-    <div class="contenedorReloj" id="contenedor">
-      <div id="hora">Reloj Digital</div>
-      <div id="fecha">Fecha</div>
-    </div>
-  </div>
   
     <script src="aaa.js"></script>
-    <script src="storage.js"></script>
+    <script src="bbb.js"></script>
 </body>
 </html>
