--- a/aaa.html
+++ b/aaa.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="aaa.css">
     <title>Document</title>
 </head>
 <body>
-    <h1 id="pag2">PUTO EL QUE LEA.</h1>
-    <div class="col-sm-4">
+    <h1 id="pag2">Acá tengo un reloj re lindo uwu</h1>
+    <!-- <div class="col-sm-4">
         <label for="Item" class="form-label">Nuevo ítem:</label>
         <input type="text" class="form-control" id="item">
         <div class="d-grid">
@@ -23,6 +24,13 @@
                 <div class="float-end">
                   <button type="button" class="btn btn-outline-danger my-3" id="limpiar">Limpiar</button>
                 </div>
+              </div> -->
+              <div id="reloj">
+                <div class="contenedorReloj" id="contenedor">
+                  <div id="hora">Reloj Digital</div>
+                  <div id="fecha">Fecha</div>
+                </div>
               </div>
+              <script src="bbb.js"></script>
 </body>
 </html>
