--- a/aaa.html
+++ b/aaa.html
@@ -1,36 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="aaa.css">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="aaa.css">
+  <title>Document</title>
 </head>
+
 <body>
-    <h1 id="pag2">Acá tengo un reloj re lindo uwu</h1>
-    <!-- <div class="col-sm-4">
-        <label for="Item" class="form-label">Nuevo ítem:</label>
-        <input type="text" class="form-control" id="item">
-        <div class="d-grid">
-          <button type="button" class="btn btn-primary my-3" id="agregar">Agregar</button>
-        </div>
-      </div>
-            <div class="col-sm-8">
-                <div class="border rounded-3 cont">
-                  <ul class="list-group" id="contenedor">
-                  </ul>
-                </div>
-                <div class="float-end">
-                  <button type="button" class="btn btn-outline-danger my-3" id="limpiar">Limpiar</button>
-                </div>
-              </div> -->
-              <div id="reloj">
-                <div class="contenedorReloj" id="contenedor">
-                  <div id="hora">Reloj Digital</div>
-                  <div id="fecha">Fecha</div>
-                </div>
-              </div>
-              <script src="bbb.js"></script>
+  <header>
+    <h1 id="pag2">Bom día</h1>
+    <nav>
+      
+    </nav>
+  </header>
+  <div id="reloj">
+    <div class="contenedorReloj" id="contenedor">
+      <div id="hora">Reloj Digital</div>
+      <div id="fecha">Fecha</div>
+    </div>
+  </div>
+  <script src="bbb.js"></script>
 </body>
+
 </html>
